--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -14,15 +14,12 @@
 </div>
 
 
-<div class="row paddedRow">
-    <div class="col-lg-9 col-md-10 col-sm-12">
-        <app-custom-asset-wizard></app-custom-asset-wizard>
-    </div>
-</div>
-
-
 <div class="row paddedRow" style="margin-bottom: 60px;">
-    <div class="col-lg-9 col-md-10 col-sm-12">
+    <div class="col-lg-6 col-md-6 col-sm-12">
+        <app-custom-asset-wizard (assetAdded)="customAssets.highlightLastAddedAsset($event)"
+                                 (addAssetFailed)="customAssets.highlightDuplicateAsset($event)"></app-custom-asset-wizard>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12">
         <app-custom-assets #customAssets></app-custom-assets>
     </div>
 </div>
