--- a/src/app/configuration/custom-assets/custom-assets.component.css
+++ b/src/app/configuration/custom-assets/custom-assets.component.css
@@ -1,3 +1,23 @@
+#customAssetsTable {
+    width: 100%;
+}
+#customAssetsTable tr:nth-child(even) {
+    background-color: white;
+}
+#customAssetsTable tr.asset-item:hover {
+    background-color: #e0e0e0;
+}
+
+img.asset-icon {
+    width: 24px;
+    height: 24px;
+}
+
+button.removeButton {
+    background-color: #ED8117;
+}
+
+
 button.big-button {
     height: 40px;
     min-width: 80px;
