Custom asset wizard, more code

--- a/src/app/configuration/custom-asset-wizard/custom-asset-wizard.component.html
+++ b/src/app/configuration/custom-asset-wizard/custom-asset-wizard.component.html
@@ -28,7 +28,7 @@
         </td>
         <td title="issuer address: {{asset.issuerAddress}}">{{asset.code}}-{{asset.domain}}</td>
         <td>
-            <button type="button" class="addButton" (click)="addAsset(asset.code, asset.issuerAddress, asset.domain)">Add</button>
+            <button type="button" class="addButton" (click)="addAsset(asset)">Add</button>
         </td>
     </tr>
 </table>
