DropDownOption changed to have generic value to be able to support Asset class after it's merged

--- a/src/app/custom-exchange/custom-exchange.component.html
+++ b/src/app/custom-exchange/custom-exchange.component.html
@@ -2,11 +2,6 @@
     <div onmouseover="$(this).find('div.removeExchButton').show();" onmouseout="$(this).find('div.removeExchButton').hide();">
         <div class="assetsSelection" onclick="return false;">
             <div class="removeExchButton" (click)="removeExchange()">X</div>
-
-
-
-
-
             <div class="assetDropDowns">
 <!--DEL?
                 <mat-form-field style="width: 100px;">
@@ -26,7 +21,16 @@
                 </mat-form-field>
 -->
                 <mat-form-field style="width: 50%;">
-                    <mat-select [(value)]="selectedBaseAsset" class="selectedAssetOption">
+                    <mat-select [(value)]="selectedBaseAsset" class="selectedAssetOption"
+                                (selectionChange)="issuerChanged($event)" [title]="selectedBaseAsset.tooltip">
+                        <mat-option class="ddOption" *ngFor="let asset of assetOptions" [value]="asset" title="{{asset.tooltip}}">
+                            <img src="{{asset.imageUrl}}" style="width: 24px; height: 24px;" /> {{asset.text}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field style="width: 50%;">
+                    <mat-select [(value)]="selectedCounterAsset" class="selectedAssetOption"
+                                (selectionChange)="issuerChanged($event)" [title]="selectedCounterAsset.tooltip">
                         <mat-option class="ddOption" *ngFor="let asset of assetOptions" [value]="asset" title="{{asset.tooltip}}">
                             <img src="{{asset.imageUrl}}" style="width: 24px; height: 24px;" /> {{asset.text}}
                         </mat-option>
@@ -36,7 +40,7 @@
 
 
 
-                <mat-form-field style="width: 100px;">
+<!--DEL?                <mat-form-field style="width: 100px;">
                     <mat-select [(value)]="selectedCounterAssetCode" class="selectedAssetCode"
                                 (selectionChange)="counterAssetCodeChanged($event)" [title]="selectedCounterAssetCode.tooltip">
                         <mat-option class="ddOption" *ngFor="let assetCode of assetCodeOptions" [value]="assetCode" title="{{assetCode.tooltip}}">
@@ -51,6 +55,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
+-->
             </div>
         </div>
         <div id="customExchangeChart{{exchange.id}}" class="exchange-link-chart">
