Cleanup 1/2: removed custom asset codes component

--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -4,10 +4,9 @@
         <h4>Manage custom assets to be used on the Exchanges.</h4>
     </div>
 </div>
-<div class="row paddedRow">
-    <div class="col-lg-4 col-md-4 col-sm-12">
-        <app-custom-asset-codes (assetCodesChanged)="customAssets.updateAssetCodes()"></app-custom-asset-codes>
-    </div>
+
+
+<div class="row paddedRow">   <!-- TODO: delete this -->
     <div class="col-lg-8 col-md-8 col-sm-12">
         <app-custom-issuers (issuersChanged)="customAssets.updateIssuers()"></app-custom-issuers>
     </div>
