--- a/src/app/exchange/exchange.component.css
+++ b/src/app/exchange/exchange.component.css
@@ -69,3 +69,17 @@ mat-form-field {
     font-size: .92rem !important;
     font-family: consolas,"Liberation Mono",courier,monospace;
 }
+
+.selectedAssetCode {
+    height: 38px;
+    width: 140px;
+    line-height: 38px;
+    background-position: 4px 50%;
+    background-repeat: no-repeat;
+    background-size: 32px 32px;
+}
+.selectedIssuerOption {
+    height: 38px;
+    line-height: 38px;
+    padding-left: 5px;
+}
