New custom assets wizard (#42)
* First draft of new custom asset wizard

* Basic logic for the new custom asset wizard

* More custom asset wizard logic and styling

* Custom asset wizard, more code

* Cleanup of common assets. Some AssetService ideas in comments.

* KnownAccounts cleanup, unit tests temporarily fixed

* Removed property Account.shortName as it wasn't really used.

* First code to remake My Exchange markets to simple assets

* DropDownOption changed to have generic value to be able to support Asset class after it's merged

* Fixed unit tests

* Cleanup 1/2: removed custom asset codes component

* Another minor cleanup for the custom asset wizard

* More code deleted from the Asset Service

* Cleanup 2/2 - deleted last remains of old Custom Asset management

* More refactoring (small one)

* Updated protractor to work with higher Chrome version

* One of e2e tests on the Configuration page reworked

* e2e tests fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -123,16 +123,15 @@ div.headerLinks {
     font-weight: bolder;
     background-color: #FDFDFD;
 }
-:host ::ng-deep .selectedAssetCode {
-    height: 38px;
-    width: 140px;
-    line-height: 38px;
-    background-position: 4px 50%;
-    background-repeat: no-repeat;
-    background-size: 32px 32px;
-}
-:host ::ng-deep .selectedIssuerOption {
+
+:host ::ng-deep .selectedAssetOption {
     height: 38px;
     line-height: 38px;
-    padding-left: 5px;
+    padding-left: 15px;
 }
+
+
+
+/*TODO: delete these*/
+
+
