--- a/src/app/custom-exchange/custom-exchange.component.html
+++ b/src/app/custom-exchange/custom-exchange.component.html
@@ -3,33 +3,19 @@
         <div class="assetsSelection" onclick="return false;">
             <div class="removeExchButton" (click)="removeExchange()">X</div>
             <div class="assetDropDowns">
-                <mat-form-field style="width: 100px;">
-                    <mat-select [(value)]="selectedBaseAssetCode" class="selectedAssetCode"
-                                (selectionChange)="baseAssetCodeChanged($event)" [title]="selectedBaseAssetCode.tooltip">
-                        <mat-option class="ddOption" *ngFor="let assetCode of assetCodeOptions" [value]="assetCode" title="{{assetCode.tooltip}}">
-                            {{assetCode.text}}
+                <mat-form-field style="width: 50%;">
+                    <mat-select [(value)]="selectedBaseAsset" class="selectedAssetOption"
+                                (selectionChange)="issuerChanged($event)" [title]="selectedBaseAsset.tooltip">
+                        <mat-option class="ddOption" *ngFor="let asset of assetOptions" [value]="asset" title="{{asset.tooltip}}">
+                            <img src="{{asset.imageUrl}}" style="width: 24px; height: 24px;" /> {{asset.text}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <mat-form-field style="width: calc(50% - 100px);" [title]="selectedBaseIssuer.tooltip">
-                    <mat-select [(value)]="selectedBaseIssuer" class="selectedIssuerOption" (selectionChange)="issuerChanged($event)">
-                        <mat-option class="ddOption" *ngFor="let issuer of this.baseIssuerOptions" [value]="issuer" title="{{issuer.tooltip}}">
-                            {{issuer.text}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field style="width: 100px;">
-                    <mat-select [(value)]="selectedCounterAssetCode" class="selectedAssetCode"
-                                (selectionChange)="counterAssetCodeChanged($event)" [title]="selectedCounterAssetCode.tooltip">
-                        <mat-option class="ddOption" *ngFor="let assetCode of assetCodeOptions" [value]="assetCode" title="{{assetCode.tooltip}}">
-                            {{assetCode.text}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field style="width: calc(50% - 100px);" [title]="selectedCounterIssuer.tooltip">
-                    <mat-select [(value)]="selectedCounterIssuer" class="selectedIssuerOption" (selectionChange)="issuerChanged($event)">
-                        <mat-option class="ddOption" *ngFor="let issuer of this.counterIssuerOptions" [value]="issuer" title="{{issuer.tooltip}}">
-                            {{issuer.text}}
+                <mat-form-field style="width: 50%;">
+                    <mat-select [(value)]="selectedCounterAsset" class="selectedAssetOption"
+                                (selectionChange)="issuerChanged($event)" [title]="selectedCounterAsset.tooltip">
+                        <mat-option class="ddOption" *ngFor="let asset of assetOptions" [value]="asset" title="{{asset.tooltip}}">
+                            <img src="{{asset.imageUrl}}" style="width: 24px; height: 24px;" /> {{asset.text}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
