--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -4,16 +4,13 @@
         <h4>Manage custom assets to be used on the Exchanges.</h4>
     </div>
 </div>
-<div class="row paddedRow">
-    <div class="col-lg-4 col-md-4 col-sm-12">
-        <app-custom-asset-codes (assetCodesChanged)="customAssets.updateAssetCodes()"></app-custom-asset-codes>
-    </div>
-    <div class="col-lg-8 col-md-8 col-sm-12">
-        <app-custom-issuers (issuersChanged)="customAssets.updateIssuers()"></app-custom-issuers>
-    </div>
-</div>
+
 <div class="row paddedRow" style="margin-bottom: 60px;">
-    <div class="col-lg-9 col-md-10 col-sm-12">
+    <div class="col-lg-6 col-md-6 col-sm-12">
+        <app-custom-asset-wizard (assetAdded)="customAssets.highlightLastAddedAsset($event)"
+                                 (addAssetFailed)="customAssets.highlightDuplicateAsset($event)"></app-custom-asset-wizard>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12">
         <app-custom-assets #customAssets></app-custom-assets>
     </div>
 </div>
