--- a/src/app/my-exchanges/my-exchanges.component.html
+++ b/src/app/my-exchanges/my-exchanges.component.html
@@ -1,6 +1,6 @@
 <div class="row exchanges-frame">
     <ng-container *ngFor="let exch of exchanges">
-        <app-custom-exchange [exchange]="exch"></app-custom-exchange>
+        <app-custom-exchange [exchange]="exch" (dragStarted)="onDragStarted($event)"></app-custom-exchange>
     </ng-container>
     
     <div id="addCustomExchange" class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
@@ -8,4 +8,5 @@
             (add)
         </div>
     </div>
+    DEBUG: {{this.draggingExchId}}
 </div>
