First logic to the reposition feature

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -130,8 +130,7 @@ div.headerLinks {
     padding-left: 15px;
 }
 
-
-
-/*TODO: delete these*/
-
-
+:host ::ng-deep #draggedExchangeClone {
+    margin: 0;
+    padding: 0;
+}
