--- a/src/app/custom-exchange/custom-exchange.component.html
+++ b/src/app/custom-exchange/custom-exchange.component.html
@@ -1,6 +1,7 @@
-<div id="customExchange{{exchange.id}}" class="col-xl-3 col-lg-4 col-md-6 col-sm-12 customExchange">
-    <div onmouseover="$(this).find('div.hoverButton').show();"
-         onmouseout="$(this).find('div.hoverButton').hide();">
+<div id="customExchange{{exchange.id}}" class="col-xl-3 col-lg-4 col-md-6 col-sm-12 customExchange" [class.dropTarget]="highlightDropTarget">
+    <div [ngStyle]="{ 'display' : this.isDragged ? 'block' : 'none' }" class="draggedExchOverlay"></div>
+    <div onmouseover="$(this).find('div.hoverButton').show();" (mouseover)="onMouseOver()"
+         onmouseout="$(this).find('div.hoverButton').hide();" (mouseout)="highlightDropTarget = false;">
         <div class="assetsSelection" onclick="return false;">
             <div class="hoverButton moveExchButton" (mousedown)="startDrag()" title="Drag and drop to relocate this exchange (TODO!)">&#10542;</div>
             <div class="hoverButton removeExchButton" (click)="removeExchange()" title="Remove this exchange from the list">X</div>
