Cancel custom exchange reposition
Cancel dragging of a custom exchange (page My Exchanges) when user click outside of valid slots for drop. New unit test.

--- a/src/app/custom-exchange/custom-exchange.component.html
+++ b/src/app/custom-exchange/custom-exchange.component.html
@@ -3,7 +3,7 @@
     <div onmouseover="$(this).find('div.hoverButton').show();" (mouseover)="onMouseOver()"
          onmouseout="$(this).find('div.hoverButton').hide();" (mouseout)="highlightDropTarget = false;">
         <div class="assetsSelection" onclick="return false;">
-            <div class="hoverButton moveExchButton" (mousedown)="startDrag()" title="Drag and drop to relocate this exchange (TODO!)">&#10542;</div>
+            <div class="hoverButton moveExchButton" (click)="startDrag()" title="Drag and drop to relocate this exchange (TODO!)">&#10542;</div>
             <div class="hoverButton removeExchButton" (click)="removeExchange()" title="Remove this exchange from the list">X</div>
             <div class="assetDropDowns">
                 <mat-form-field style="width: 50%;">
