--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" (mousedown)="onClick();">
+<div class="container-fluid" (click)="onClick();">
     <div class="row" style="margin: 5px;">
         <div class="col-lg-2 col-md-2 col-sm-2 col-12">
             <a routerLink="/overview" id="logo" class="link" title="Nebular">
@@ -27,6 +27,6 @@
 <footer id="footer">
     <div class="container">
         <span>Only for information. Accuracy of data is not guaranteed. No investment or trading decision should be made based on this page.<br/>
-              Got something to say? Send me a MEMO to GASJBQBTC4C5J7X24C4Q7S6IKMMK3HKWBX4WMJYEQUW7OKMKNNDRK3J7. v20.01.04</span>
+              Got something to say? Send me a MEMO to GASJBQBTC4C5J7X24C4Q7S6IKMMK3HKWBX4WMJYEQUW7OKMKNNDRK3J7. v20.01.21</span>
     </div>
 </footer>
