--- a/src/app/custom-exchange/custom-exchange.component.html
+++ b/src/app/custom-exchange/custom-exchange.component.html
@@ -1,9 +1,10 @@
-<div id="customExchange{{exchange.id}}" class="col-xl-3 col-lg-4 col-md-6 col-sm-12 customExchange" [class.dropTarget]="highlightDropTarget">
+<div id="customExchange{{exchange.id}}" class="col-xl-3 col-lg-4 col-md-6 col-sm-12 customExchange" [class.dropTarget]="highlightDropTarget"
+     (click)="onClick($event)">
     <div [ngStyle]="{ 'display' : this.isDragged ? 'block' : 'none' }" class="draggedExchOverlay"></div>
     <div onmouseover="$(this).find('div.hoverButton').show();" (mouseover)="onMouseOver()"
          onmouseout="$(this).find('div.hoverButton').hide();" (mouseout)="highlightDropTarget = false;">
         <div class="assetsSelection" onclick="return false;">
-            <div class="hoverButton moveExchButton" (click)="startDrag()" title="Drag and drop to relocate this exchange (TODO!)">&#10542;</div>
+            <div class="hoverButton moveExchButton" (click)="startDrag($event)" title="Drag and drop to relocate this exchange (TODO!)">&#10542;</div>
             <div class="hoverButton removeExchButton" (click)="removeExchange()" title="Remove this exchange from the list">X</div>
             <div class="assetDropDowns">
                 <mat-form-field style="width: 50%;">
