--- a/src/app/custom-exchange/custom-exchange.component.html
+++ b/src/app/custom-exchange/custom-exchange.component.html
@@ -4,8 +4,8 @@
     <div onmouseover="$(this).find('div.hoverButton').show();" (mouseover)="onMouseOver()"
          onmouseout="$(this).find('div.hoverButton').hide();" (mouseout)="highlightDropTarget = false;">
         <div class="assetsSelection" onclick="return false;">
-            <div class="hoverButton moveExchButton" (click)="startDrag($event)" title="Drag and drop to relocate this exchange (TODO!)">&#10542;</div>
-            <div class="hoverButton removeExchButton" (click)="removeExchange()" title="Remove this exchange from the list">X</div>
+            <div *ngIf="!this.uiActions.DraggingExchange" class="hoverButton moveExchButton" (click)="startDrag($event)" title="Move this tile">&harr;</div>
+            <div *ngIf="!this.uiActions.DraggingExchange" class="hoverButton removeExchButton" (click)="removeExchange()" title="Remove this exchange">X</div>
             <div class="assetDropDowns">
                 <mat-form-field style="width: 50%;">
                     <mat-select [(value)]="selectedBaseAsset" class="selectedAssetOption"
