Redirected to new backend API
+ handled missing domain

--- a/src/app/exchange-thumbnail/exchange-thumbnail.component.html
+++ b/src/app/exchange-thumbnail/exchange-thumbnail.component.html
@@ -3,12 +3,12 @@
         <div class="lastPrice">{{lastPrice}}</div>
             <div class="baseAssetDesc">
                 <span class="baseAssetCode">{{this.showAssetNames ? exchange.baseAsset.code : ""}}</span><br/>
-                <span class="baseAssetIssuer">{{this.showAssetNames ? exchange.baseAsset.issuer.domain : ""}}</span>
+                <span class="baseAssetIssuer">{{this.showAssetNames && exchange.baseAsset.issuer ? exchange.baseAsset.issuer.domain : ""}}</span>
             </div>
             <span class="slash">{{this.showAssetNames ? "/" : ""}}</span>
             <div class="counterAssetDesc">
                 <span class="counterAssetCode">{{this.showAssetNames ? exchange.counterAsset.code : ""}}</span><br/>
-                <span class="counterAssetIssuer">{{this.showAssetNames ? exchange.counterAsset.issuer.domain : ""}}</span>
+                <span class="counterAssetIssuer">{{this.showAssetNames && exchange.counterAsset.issuer ? exchange.counterAsset.issuer.domain : ""}}</span>
             </div>
         <div [className]="dailyChangeDesc.startsWith('-') ? 'dailyChangePercent red' : 'dailyChangePercent green'">{{dailyChangeDesc}}</div>
     </div>
