Cookie agreement prompt for Configuration and My Exchanges . Fixes #52

--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -5,7 +5,7 @@
     </div>
 </div>
 
-<div class="row paddedRow" style="margin-bottom: 60px;">
+<div *ngIf="this.nebularService.CookieAgreement" class="row paddedRow" style="margin-bottom: 60px;">
     <div class="col-lg-6 col-md-6 col-sm-12">
         <app-custom-asset-wizard (assetAdded)="customAssets.highlightLastAddedAsset($event)"
                                  (addAssetFailed)="customAssets.highlightDuplicateAsset($event)"></app-custom-asset-wizard>
@@ -14,3 +14,5 @@
         <app-custom-assets #customAssets></app-custom-assets>
     </div>
 </div>
+
+<app-cookie-consent *ngIf="!this.nebularService.CookieAgreement"></app-cookie-consent>
