--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -86,6 +86,22 @@ div.headerLinks {
     padding-right: 40px;
 }
 
+:host ::ng-deep button {
+    border: none;
+    border-radius: 3px;
+    height: 28px;
+    min-width: 50px;
+    background-color: #23527c;
+    color: white;
+}
+:host ::ng-deep button:focus, button:hover {
+    background-color: #4d81b0;
+    font-weight: bold;
+}
+:host ::ng-deep button:disabled {
+    color: gray;
+}
+
 /* Asset drop-downs */
 :host ::ng-deep mat-form-field {
     margin-right: 5px;
