CSS tweak, fixes #57

--- a/src/assets/styles/material-custom.css
+++ b/src/assets/styles/material-custom.css
@@ -142,9 +142,9 @@
     line-height:1.125;
     font-family:Roboto,"Helvetica Neue",sans-serif
 }
-.mat-form-field-wrapper{
+/*DEL .mat-form-field-wrapper{
     padding-bottom:1.34375em
-}
+} */
 .mat-form-field-prefix .mat-icon,.mat-form-field-suffix .mat-icon{
     font-size:150%;
     line-height:1.125
@@ -184,10 +184,10 @@
     margin-top:.66667em;
     top:calc(100% - 1.79167em)
 }
-.mat-form-field-appearance-legacy .mat-form-field-wrapper{
+/*DEL .mat-form-field-appearance-legacy .mat-form-field-wrapper{
     padding-bottom:1.25em
 }
-/*DEL .mat-form-field-appearance-legacy .mat-form-field-infix{
+.mat-form-field-appearance-legacy .mat-form-field-infix{
     padding:.4375em 0
 } */
 .mat-form-field-appearance-legacy.mat-form-field-can-float .mat-input-server:focus+.mat-form-field-label-wrapper .mat-form-field-label,.mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label{
