--- a/src/app/configuration/custom-assets/custom-assets.component.html
+++ b/src/app/configuration/custom-assets/custom-assets.component.html
@@ -16,7 +16,7 @@
             </td>
             <td title="issuer address: {{asset.issuer.address}}">{{asset.code}}-{{asset.issuer.domain}}</td>
             <td>
-                <button type="button" class="removeButton" (click)="removeAsset(asset.code, asset.issuer.address)">Remove</button>
+                <button type="button" class="nebularBtn removeButton" (click)="removeAsset(asset.code, asset.issuer.address)">Remove</button>
             </td>
         </tr>
     </table>
