Style label on My Exchanges for empty market. Partially fixes #15

--- a/src/app/exchange-thumbnail/exchange-thumbnail.component.css
+++ b/src/app/exchange-thumbnail/exchange-thumbnail.component.css
@@ -1,6 +1,6 @@
 div.chartWarning {
-    height: 300px;
-    line-height: 300px;
+    display: table-cell;
+    vertical-align: middle;
     background-color: white;
     text-align: center;
     font-size: 25px;
