--- a/src/app/exchange/exchange.component.html
+++ b/src/app/exchange/exchange.component.html
@@ -73,16 +73,19 @@
 </div>
 
 <div class="row">
-    <div class="col-lg-2 col-md-12 col-sm-12">
-        <br/><br/>
-        <app-orderbook [exchange]="exchange" [lastPrice]="lastPrice" [lastTradeType]="lastTradeType" [lastTradeTime]="lastTradeTime"></app-orderbook>
-    </div>
-    <div class="col-lg-7 col-md-8 col-sm-8" id="candleChartPanel" style="height: 800px;">
+
+    <div class="col-xs-12 col-md-7 col-md-push-2" id="candleChartPanel" style="height: 800px;">
         <div class="chartWarning" [class.error]="dataStatus === DataStatus.Error">{{chartMessage}}</div>
         <div id="marketChart" style="min-height: 500px; height: 100%;">
         </div>
     </div>
-    <div class="col-lg-3 col-md-4 col-sm-4">
+
+    <div class="col-xs-6 col-md-pull-7 col-md-2">
+        <br/><br/>
+        <app-orderbook [exchange]="exchange" [lastPrice]="lastPrice" [lastTradeType]="lastTradeType" [lastTradeTime]="lastTradeTime"></app-orderbook>
+    </div>
+
+    <div class="col-xs-6 col-md-3">
         <br/>
         <app-trade-history [exchange]="exchange" [recentTrades]="tradeHistory"></app-trade-history>
     </div>
