--- a/src/app/exchange/exchange.component.html
+++ b/src/app/exchange/exchange.component.html
@@ -3,37 +3,26 @@
       <!--TODO: maybe some content here? -->
   </div>
   <div class="col-lg-10 col-md-12 col-sm-12">
-      <div class="dropdownsWrapper">
-        <mat-form-field style="width: 150px;">
-            <mat-select [(value)]="selectedBaseAssetCode" class="selectedAssetCode" (selectionChange)="baseAssetCodeChanged($event)"
-                        [title]="selectedBaseAssetCode != null ? selectedBaseAssetCode.tooltip : 'select asset type...'"
-                        [ngStyle]="{
-                            'background-image': selectedBaseAssetCode ? 'url(./assets/images/asset_icons/' + selectedBaseAssetCode.value + '.png' : '',
-                            'padding-left': selectedBaseAssetCode ? '40px' : '5px'
-                        }">
-                <mat-option class="ddOption" *ngFor="let assetCode of assetCodeOptions" [value]="assetCode" title="{{assetCode.tooltip}}">
-                    <img *ngIf="assetCode.value != 'ADD_CUSTOM'"
-                         src="./assets/images/asset_icons/{{assetCode.value}}.png" style="width: 32px; height: 32px;"/>
-                    {{assetCode.text}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-
-        <mat-form-field style="width: 250px;">
-            <mat-select [(value)]="selectedBaseIssuer" class="selectedIssuerOption" (selectionChange)="issuerChanged($event)"
-                        [title]="selectedBaseIssuer != null ? selectedBaseIssuer.tooltip : 'select anchor...'">
-                <mat-option class="ddOption" *ngFor="let issuer of this.baseIssuerOptions" [value]="issuer" title="{{issuer.tooltip}}">
-                    {{issuer.text}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-
-      </div>
+        <div class="dropdownsWrapper2">
+            <mat-form-field style="width: 350px; float: left;">
+                <mat-select [(value)]="selectedBaseAsset" class="selectedAsset" (selectionChange)="baseAssetChanged($event)"
+                            [title]="selectedBaseAsset?.fullName" [ngStyle]="{'background-image': 'url(' + selectedBaseAsset?.imageUrl + ')' }">
+                    <mat-option class="ddOption" *ngFor="let asset of assetOptions" [value]="asset" title="{{asset.fullName}}">
+                        <!-- mm-TODO: real image logic here of course -->
+                        <img src="{{asset.imageUrl}}" style="width: 32px; height: 32px;"/>
+                        {{asset.code}}{{asset.IsNative() ? '' : ('-' + asset.issuer?.domain)}}
+                    </mat-option>
+                    <mat-option class="ddOption" [value]="null" title="Add asset manually">
+                        [+] Add
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
 
 
       <div class="chartButton swapButton">
-        <a id="swapAssetsLink" (click)="swapAssets()" title="Switch assets">&hArr;</a>
-    </div>
+          <a id="swapAssetsLink" (click)="swapAssets()" title="Switch assets">&hArr;</a>
+      </div>
 
 
       <div class="dropdownsWrapper">
@@ -41,7 +30,7 @@
             <mat-select [(value)]="selectedCounterAssetCode" class="selectedAssetCode" (selectionChange)="counterAssetCodeChanged($event)"
                         [title]="selectedCounterAssetCode != null ? selectedCounterAssetCode.tooltip : 'select asset type...'"
                         [ngStyle]="{
-                            'background-image': selectedCounterAssetCode ? 'url(./assets/images/asset_icons/' + selectedCounterAssetCode.value + '.png' : '',
+                            'background-image': selectedCounterAssetCode ? 'url(./assets/images/asset_icons/' + selectedCounterAssetCode.value + '.png)' : '',
                             'padding-left': selectedCounterAssetCode ? '40px' : '5px'
                         }">
                 <mat-option class="ddOption" *ngFor="let assetCode of assetCodeOptions" [value]="assetCode" title="{{assetCode.tooltip}}">
