--- a/src/app/exchange/exchange.component.html
+++ b/src/app/exchange/exchange.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col-lg-2 col-md-12 col-sm-12">
-      <!--TODO: maybe some content here? -->
-  </div>
-  <div class="col-lg-10 col-md-12 col-sm-12">
-        <div class="dropdownsWrapper2">
+    <div class="col-lg-2 col-md-12 col-sm-12">
+        <!--TODO: maybe some content here? -->
+    </div>
+    <div class="col-lg-10 col-md-12 col-sm-12">
+        <div class="dropdownsWrapper">
             <mat-form-field style="width: 350px; float: left;">
-                <mat-select [(value)]="selectedBaseAsset" class="selectedAsset" (selectionChange)="baseAssetChanged($event)"
+                <mat-select [(value)]="selectedBaseAsset" class="selectedAsset" (selectionChange)="assetChanged($event)"
                             [title]="selectedBaseAsset?.fullName" [ngStyle]="{'background-image': 'url(' + selectedBaseAsset?.imageUrl + ')' }">
                     <mat-option class="ddOption" *ngFor="let asset of assetOptions" [value]="asset" title="{{asset.fullName}}">
                         <!-- mm-TODO: real image logic here of course -->
@@ -19,44 +19,33 @@
             </mat-form-field>
         </div>
 
+        <div class="chartButton swapButton">
+            <a id="swapAssetsLink" (click)="swapAssets()" title="Switch assets">&hArr;</a>
+        </div>
 
-      <div class="chartButton swapButton">
-          <a id="swapAssetsLink" (click)="swapAssets()" title="Switch assets">&hArr;</a>
-      </div>
 
-
-      <div class="dropdownsWrapper">
-        <mat-form-field style="width: 150px; float: left;">
-            <mat-select [(value)]="selectedCounterAssetCode" class="selectedAssetCode" (selectionChange)="counterAssetCodeChanged($event)"
-                        [title]="selectedCounterAssetCode != null ? selectedCounterAssetCode.tooltip : 'select asset type...'"
-                        [ngStyle]="{
-                            'background-image': selectedCounterAssetCode ? 'url(./assets/images/asset_icons/' + selectedCounterAssetCode.value + '.png)' : '',
-                            'padding-left': selectedCounterAssetCode ? '40px' : '5px'
-                        }">
-                <mat-option class="ddOption" *ngFor="let assetCode of assetCodeOptions" [value]="assetCode" title="{{assetCode.tooltip}}">
-                    <img *ngIf="assetCode.value != 'ADD_CUSTOM'"
-                        src="./assets/images/asset_icons/{{assetCode.value}}.png" style="width: 32px; height: 32px;"/>
-                    {{assetCode.text}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-
-        <mat-form-field style="width: 250px;">
-            <mat-select [(value)]="selectedCounterIssuer" class="selectedIssuerOption" (selectionChange)="issuerChanged($event)"
-                        [title]="selectedCounterIssuer != null ? selectedCounterIssuer.tooltip : 'select anchor...'">
-                <mat-option class="ddOption" *ngFor="let issuer of counterIssuerOptions" [value]="issuer" title="{{issuer.tooltip}}">
-                    {{issuer.text}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="chartButton intervalButtons">
-        <!-- TODO: rework these to standard GET links if possible. JS should not be necessary. -->
-        <a class="link" [class.selected]="chartInterval === 900000" (click)="setChartInterval('15min');">15min</a>&nbsp;
-        <a class="link" [class.selected]="chartInterval === 3600000" (click)="setChartInterval('1h');">hour</a>&nbsp;
-        <a class="link" [class.selected]="chartInterval === 86400000" (click)="setChartInterval('1day');">day</a>&nbsp;
-        <a class="link" [class.selected]="chartInterval === 604800000" (click)="setChartInterval('1week');">week</a>
-      </div>
+        <div class="dropdownsWrapper">
+            <mat-form-field style="width: 350px; float: left;">
+                <mat-select [(value)]="selectedCounterAsset" class="selectedAsset" (selectionChange)="assetChanged($event)"
+                            [title]="selectedCounterAsset?.fullName" [ngStyle]="{'background-image': 'url(' + selectedCounterAsset?.imageUrl + ')' }">
+                    <mat-option class="ddOption" *ngFor="let asset of assetOptions" [value]="asset" title="{{asset.fullName}}">
+                        <!-- mm-TODO: real image logic here of course -->
+                        <img src="{{asset.imageUrl}}" style="width: 32px; height: 32px;"/>
+                        {{asset.code}}{{asset.IsNative() ? '' : ('-' + asset.issuer?.domain)}}
+                    </mat-option>
+                    <mat-option class="ddOption" [value]="null" title="Add asset manually">
+                        [+] Add
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="chartButton intervalButtons">
+            <!-- TODO: rework these to standard GET links if possible. JS should not be necessary. -->
+            <a class="link" [class.selected]="chartInterval === 900000" (click)="setChartInterval('15min');">15min</a>&nbsp;
+            <a class="link" [class.selected]="chartInterval === 3600000" (click)="setChartInterval('1h');">hour</a>&nbsp;
+            <a class="link" [class.selected]="chartInterval === 86400000" (click)="setChartInterval('1day');">day</a>&nbsp;
+            <a class="link" [class.selected]="chartInterval === 604800000" (click)="setChartInterval('1week');">week</a>
+        </div>
   </div>
 
 </div>
